cmake_minimum_required(VERSION 3.27)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled B5/10699.cpp
        B5/7287.cpp
        B5/10171.cpp
        B5/10172.cpp
        B5/25083.cpp
        B5/11382.cpp
        B5/1330.cpp
        B5/9498.cpp
        B5/14681.cpp
        B5/2753.cpp
        B5/2420.cpp
        B5/2741.cpp
        B5/10872.cpp
        "B5/10950.cpp"
        "B5/10952.cpp"
        B5/2739.cpp
        B5/2438.cpp
        "B5/10951.cpp"
        "B4/15552.cpp"
        "B5/10871.cpp"
        B5/10807.cpp
        B5/5597.cpp
        B5/2738.cpp
        B5/11654.cpp
        B5/2743.cpp
        B5/2744.cpp
        B5/2754.cpp
        B5/27866.cpp
        B5/9086.cpp
        B5/11718.cpp
        B5/15964.cpp
        B5/2475.cpp
        "B3/2562.cpp"
        "B2/2675.cpp"
        "B3/10818.cpp"
        "B4/11720.cpp"
        B2/1152.cpp
        B1/1157.cpp
        B4/2439.cpp
        B2/2577.cpp
        B3/2884.cpp
        B2/2920.cpp
        B2/3052.cpp
        B2/8958.cpp
        B3/10250.cpp
        B2/10809.cpp
        B5/1271.cpp
        B5/8393.cpp
        B5/11021.cpp
        B5/11022.cpp
        B1/1546.cpp
        S4/2839.cpp
        B2/1978.cpp
        S4/9012.cpp
        B2/2292.cpp
        S4/10828.cpp
        B2/2798.cpp
        B3/4153.cpp
        B2/2231.cpp
        B2/15829.cpp
)
